Update angular.json. Whitelist production domain

--- a/angular.json
+++ b/angular.json
@@ -59,6 +59,13 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "allowedHosts": [
+              "todoo.nikitonz.com",
+              "localhost",
+              "127.0.0.1"
+            ]
+          },
           "configurations": {
             "production": {
               "buildTarget": "todoo-frontend:build:production"
@@ -96,3 +103,4 @@
     }
   }
 }
+
