--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -127,4 +128,3 @@
     }
   }
 }
-
