--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^20.2.14",
+    "@angular/cdk": "^21.1.3",
     "@angular/common": "^21.1.3",
     "@angular/compiler": "^21.1.3",
     "@angular/core": "^21.1.3",
     "@angular/forms": "^21.1.3",
-    "@angular/material": "^20.2.14",
+    "@angular/material": "^21.1.3",
     "@angular/platform-browser": "^21.1.3",
     "@angular/router": "^21.1.3",
     "@tailwindcss/postcss": "^4.1.18",
@@ -39,6 +39,8 @@
     "@angular/build": "^21.1.3",
     "@angular/cli": "^21.1.3",
     "@angular/compiler-cli": "^21.1.3",
+    "@ngrx/effects": "^21.0.1",
+    "@ngrx/store": "^21.0.1",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.24",
     "jasmine-core": "~5.9.0",
